--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dynamic-mat-table-demo",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -12,31 +12,26 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "~12.2.16",
-    "@angular/cdk": "^12.2.13",
-    "@angular/common": "~12.2.16",
-    "@angular/compiler": "~12.2.16",
-    "@angular/core": "~12.2.16",
-    "@angular/forms": "~12.2.16",
-    "@angular/material": "^12.2.13",
-    "@angular/platform-browser": "~12.2.16",
-    "@angular/platform-browser-dynamic": "~12.2.16",
-    "@angular/router": "~12.2.16",
+    "@angular/animations": "^16",
+    "@angular/cdk": "^16",
+    "@angular/common": "^16",
+    "@angular/compiler": "^16",
+    "@angular/core": "^16",
+    "@angular/forms": "^16",
+    "@angular/material": "^16",
+    "@angular/platform-browser": "^16",
+    "@angular/platform-browser-dynamic": "^16",
+    "@angular/router": "^16",
     "@juggle/resize-observer": "^3.3.1",
-    "@ngx-formly/core": "^5.10.20",
-    "@ngx-formly/material": "^5.10.20",
-    "angularx-flatpickr": "^6.5.2",
-    "flatpickr": "^4.6.9",
     "rxjs": "~6.6.7",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "^0.13"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.18",
-    "@angular-devkit/core": "^12.2.18",
-    "@angular/cli": "~12.2.18",
-    "@angular/compiler-cli": "~12.2.16",
-    "@angular/language-service": "~12.2.16",
+    "@angular-devkit/build-angular": "^16",
+    "@angular-devkit/core": "^16",
+    "@angular/cli": "^16",
+    "@angular/compiler-cli": "^16",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.6",
@@ -47,12 +42,11 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^12.2.7",
+    "karma-jasmine-html-reporter": "~1.5.0",
+    "ng-packagr": "^16",
     "protractor": "~7.0.0",
-    "ts-node": "~8.10.2",
-    "tsickle": "^0.39.1",
+    "ts-node": "^10.9.1",
     "tslint": "~6.1.0",
-    "typescript": "~4.3.5"
+    "typescript": "^4.9.3"
   }
 }
